--- a/written/eLifeRevision/Bittner_eLife2020.tex
+++ b/written/eLifeRevision/Bittner_eLife2020.tex
@@ -1614,7 +1614,9 @@ B. Same for Anti task.
 \begin{center}
 \includegraphics[scale=0.6]{figures/figSC5/figSC5.pdf}
 \end{center}
-\caption{\small (SC5): Caption...
+\caption{\small (SC5): EPI optimization of the SC model producing rapid task switching.
+A. Entropy throughout optimization. 
+B. The emergent property statistic means and variances converge to their constraints at 12,000 iterations following the sixth augmented Lagrangian epoch.
 }
 \label{fig:SC5}
 \end{figure}
